--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST="localhost"
+DB_HOST="mysql"
 DB_PORT="3306"
 DB_DATABASE="habit_tracker"
-DB_USERNAME="root"
-DB_PASSWORD=""
+DB_USERNAME="habittracker_user"
+DB_PASSWORD="SecureHabitPass123!"
